start add upload file

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Message.orm.yml
@@ -14,7 +14,10 @@ Acted\LegalDocsBundle\Entity\Message:
           notnull: true
         messageText:
           type: text
-          notnull: true
+          nullable: true
+        filePath:
+          type: string(255)
+          nullable: true
         sendDateTime:
           type: datetime
           notnull: true
