--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "beberlei/DoctrineExtensions": "^1.0",
         "misd/phone-number-bundle": "^1.1",
         "tweedegolf/swiftmailer-logger-bundle": "dev-master",
-        "react/zmq": "^0.3.0"
+        "react/zmq": "^0.3.0",
+        "gos/web-socket-bundle": "v1.8.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
