--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefEventType.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefEventType.yml
@@ -3,3 +3,5 @@ Acted\LegalDocsBundle\Entity\RefEventType:
     properties:
         id:
             groups: [getEvent]
+        eventType:
+            groups: [chat_room]
