--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefVenueType.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefVenueType.yml
@@ -3,3 +3,5 @@ Acted\LegalDocsBundle\Entity\RefVenueType:
     properties:
         id:
             groups: [getEvent]
+        venueType:
+            groups: [chat_room]
