--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -1,6 +1,8 @@
 Acted\LegalDocsBundle\Entity\User:
   exclusion_policy: NONE
   properties:
+    id:
+      groups: [getEvent]
     passwordHash:
       exclude: true
     confirmationToken:
