--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Offer.yml
@@ -4,7 +4,7 @@ Acted\LegalDocsBundle\Entity\Offer:
         id:
             groups: [chat_list, chat_room, all_messages]
         performances:
-            groups: [chat_list, chat_room, all_messages]
+            groups: [chat_list, chat_room, all_messages, getEvent]
         comments:
             groups: [chat_list, chat_room]
         eventOffer:
