add list of add proposition artist

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -48,3 +48,8 @@ count_new_message:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:countNewMessage }
     methods:  GET
 
+add_quotation_to_event_offer:
+    path: /add_quotation_to_event_offer/{id}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:addQuotation, _format: json }
+    methods:  POST
+
