--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,6 +12,7 @@ security:
 
     access_control:
         - { path: ^/dashboard/.*, roles: [ROLE_ARTIST, ROLE_CLIENT] }
+        - { path: ^/administration/.*, roles: [ROLE_ADMIN] }
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
