--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,6 +31,7 @@ framework:
         gc_probability: 0
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
+        gc_probability: 0
     fragments:       ~
     http_method_override: true
 
