--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -37,6 +37,10 @@ Acted\LegalDocsBundle\Entity\Artist:
           type: integer
           options:
             default: 0
+        spotlight:
+          type: integer
+          options:
+            default: 0
     manyToOne:
         city:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCity
