--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -35,10 +35,12 @@ Acted\LegalDocsBundle\Entity\Artist:
           nullable: true
         recommend:
           type: integer
-          nullable: true
+          options:
+            default: 0
         spotlight:
           type: integer
-          nullable: true
+          options:
+            default: 0
     manyToOne:
         city:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCity
