--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -35,12 +35,10 @@ Acted\LegalDocsBundle\Entity\Artist:
           nullable: true
         recommend:
           type: integer
-          options:
-            default: 0
+          nullable: true
         spotlight:
           type: integer
-          options:
-            default: 0
+          nullable: true
     manyToOne:
         city:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCity
