--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -14,6 +14,10 @@ profile_edit_page:
     path:     /edit_profile/{slug}
     defaults: { _controller: ActedLegalDocsBundle:Profile:editProfile }
     methods:  [GET]
+profile_edit_page_pagination_performance:
+    path:     /edit_profile/{slug}/performance
+    defaults: { _controller: ActedLegalDocsBundle:Profile:editProfilePaginationPerformance }
+    methods:  [GET]
 profile_performance_list:
     path:     /{slug}/performance
     defaults: { _controller: ActedLegalDocsBundle:Profile:performances }
