--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
@@ -41,6 +41,10 @@ Acted\LegalDocsBundle\Entity\Category:
             type: integer
             gedmo:
               - treeLevel
+        isRecommend:
+            type: boolean
+            options:
+                default: false
     manyToOne:
         root:
             targetEntity: Acted\LegalDocsBundle\Entity\Category
