--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Performance.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Performance.yml
@@ -2,8 +2,10 @@ Acted\LegalDocsBundle\Entity\Performance:
     exclusion_policy: NONE
     properties:
         id:
-            groups: [chat_list, chat_room, all_messages]
+            groups: [chat_list, chat_room, all_messages, performance_create]
         title:
             groups: [chat_list, chat_room, all_messages]
+        status:
+            groups: [performance_create]
         profile:
             groups: [getEvent]
