resend confirmation token, add check if user not temporary send confirmation message to email

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -31,6 +31,10 @@ Acted\LegalDocsBundle\Entity\User:
           type: boolean
           options:
             default: false
+        temporary:
+          type: boolean
+          options:
+            default: false
         avatar:
           type: string(256)
           nullable: true
