--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -17,7 +17,7 @@ Acted\LegalDocsBundle\Entity\User:
       groups: [chat_list, chat_room, message, all_messages, users_list]
     active:
       groups: [users_list]
-    temporary:
+    fake:
       groups: [users_list]
     email:
       groups: [users_list]
