--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/QuotationType.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/QuotationType.orm.yml
@@ -266,4 +266,7 @@ Acted\LegalDocsBundle\Entity\QuotationType:
     manyToOne:
         event:
             targetEntity: Acted\LegalDocsBundle\Entity\Event
+            joinColumn:
+                referencedColumnName: id
+                onDelete: CASCADE
     lifecycleCallbacks: {  }
