--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -39,7 +39,13 @@ Acted\LegalDocsBundle\Entity\EventOffer:
     manyToOne:
         event:
           targetEntity: Acted\LegalDocsBundle\Entity\Event
+          joinColumn:
+            referencedColumnName: id
+            onDelete: CASCADE
         offer:
           targetEntity: Acted\LegalDocsBundle\Entity\Offer
           inversedBy: eventOffer
+          joinColumn:
+            referencedColumnName: id
+            onDelete: CASCADE
     lifecycleCallbacks: {  }
