add ability for change active status user

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
@@ -37,3 +37,8 @@ admin_delete_user:
     path:     /users/delete/{user}
     defaults: { _controller: ActedLegalDocsBundle:Admin:deleteUser, _format: json }
     methods:  DELETE
+
+admin_change_status_user:
+    path:     /users/change_status/{user}
+    defaults: { _controller: ActedLegalDocsBundle:Admin:changeStatus, _format: json }
+    methods:  POST
